--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,9 @@
     <h1 class ="container p-5 h-100 w-100 text-center">
       <div class="mb-3">Login to Skillbox with Freelancer</div>
       <div class = "loginBannerContainer w-50 m-auto p-3">
-        <img id="loginBanner" class="img-fluid" src="{{ url_for('static', filename='images/freelancerLogo.png') }}" alt="Login with Freelancer"/>
+        <a href="/authorize">
+          <img id="loginBanner" class="img-fluid" src="{{ url_for('static', filename='images/freelancerLogo.png') }}" alt="Login with Freelancer"/>
+        </a>
       </div>
     </div>
   </div>
