Working printing jobs.

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -30,7 +30,7 @@
                     <li class="job-item">
                         <div class="job-info-box">
                             <label for="role">Role</label>
-                            <input type="text" name="{{jobs}}-role" />
+                            <input type="text" name="{{jobs|length|string}}-role" />
                         </div>
                     </li>
                 </ul>
