--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Skillbox - {% block title %}{% endblock %}</title>
+    <title>SkillBox - {% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
 
