--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<script></script>
-<head>
-    <title>Create a Project</title>
-    <script src="{{ url_for('static', filename='js/script.js') }}" ></script>
-    <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+{% block head %}
+  {{ super() }}
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+{% endblock %}
+{% block content %}
 <body>
     <div id="header">
         <ul>
@@ -44,3 +43,4 @@
         </div>
     </div>
 </body>
+{% endblock %}
