moved nav into base

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
+{{ super() }}
 <div class = "row h-100 w-100 align-items-center">
   <div class = "col h-75">
     <h1 class ="container p-5 h-100 w-100 text-center">
