--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,23 +4,7 @@
 {{ super() }}
 {% endblock %}
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">SkillBox</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <button class="btn btn-success nav-link p-2">Create Job</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+{{ super() }}
 <div class="d-flex justify-content-center">
     <div class="d-flex-column projectsContainer">
         <h1> Active Projects </h1>
@@ -34,7 +18,7 @@
                         <li class="list-group-item list-group-item-dark">Graphic Design</li>
                         <li class="list-group-item list-group-item-dark">Digital marketing</li>
                     </ul>
-                <a href="#" class="mt-2 btn btn-success">Project Details</a>
+                    <a href="#" class="mt-2 btn btn-success">Project Details</a>
             </div>
         </div>
         <div class="card bg-light m-1">
@@ -46,7 +30,7 @@
                         <li class="list-group-item list-group-item-dark">Law documents</li>
                         <li class="list-group-item list-group-item-dark">Marketing</li>
                     </ul>
-                <a href="#" class="mt-2 btn btn-success">Project Details</a>
+                    <a href="#" class="mt-2 btn btn-success">Project Details</a>
             </div>
         </div>
     </div>
