--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -1,46 +1,37 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %}New Project{% endblock %}
 {% block head %}
-  {{ super() }}
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+{{ super() }}
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
 {% block content %}
-<body>
-    <div id="header">
-        <ul>
-            <li>Create New Project</li>
-            <li><a class="hvr-underline-from-center" href="/">Home</a></li>
-        </ul>
-    </div>
-    <div class="project-wrap">
-        <div class="project-info-box">
+{{super()}}
+<div class="d-flex justify-content-center">
+    <div class="card p-5">
         <form method="POST">
-            <h2>New Project</h2>
+            <div class="form-group">
+                <h2>Create a New Project</h2>
                 <label for="title">Project Title</label>
-                <input type="text" name="title" />
-                <br>
+                <input class="form-control" type="text" name="title" />
                 <label for="description">Description</label>
-                <input type="text" name="description" />
-                <br>
+                <input class="form-control" type="text" name="description" />
                 <label for="location">Location</label>
-                <input type="text" name="location" />
-                <br>
+                <input class="form-control" type="text" name="location" />
                 <label for="jobs">Jobs</label>
-
+    
                 <ul class="job-list">
                     <li class="job-item">
                         <div class="job-info-box">
                             <label for="role">Role</label>
-                            <input type="text" name="{{jobs|length|string}}-role" />
+                            <input class="form-control" type="text" name="{{jobs|length|string}}-role" />
                         </div>
                     </li>
                     <a href="#" id="new-job-button">New job!</a>
                 </ul>
-
-                <input type="submit" style="margin-top:20px;"class="submit-donate" value="Submit" />
-
+    
+                <input class="form-control" type="submit" style="margin-top:20px;" class="submit-donate" value="Submit" />
+            </div>
         </form>
-        </div>
     </div>
-</body>
+</div>
 {% endblock %}
