--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -46,7 +46,7 @@
                 <a href="#" id="new-job-button">New job!</a>
                 <br />
 
-                <input class="form-control" type="submit" style="margin-top:20px;"class="submit-donate" value="Submit" />
+                <button type="submit" class="btn btn-primary" value="Submit" />
 
         </form>
     </div>
