--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -1,52 +1,66 @@
 {% extends "base.html" %}
 {% block title %}New Project{% endblock %}
 {% block head %}
-  {{ super() }}
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+{{ super() }}
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
 {% block content %}
 {{super()}}
 <div class="d-flex justify-content-center">
-    <div class="card p-5">
+    <div class="card p-5 w-50">
         <form method="POST">
             <div class="form-group">
                 <h2>Create a New Project</h2>
                 <label for="title">Project Title</label>
                 <input class="form-control" type="text" name="title" />
                 <label for="description">Description</label>
-                <input class="form-control" type="text" name="description" />
+                <textarea class="form-control" type="text" name="description" rows="3"></textarea>
                 <label for="location">Location</label>
                 <input class="form-control" type="text" name="location" />
-                <label for="jobs">Jobs</label>
+                <label>Jobs</label>
+                <span class="badge badge-primary" id="new-job-button">
+                    <i class="far fa-plus-square"></i>
+                    Add Job
+                </span>
+                <div class="card-deck w-100" id="job-list">
+                    <div class="card w-100" id="job-list">
+                        <label for="jobs" class="card-header w-100">Job</label>
+                        <ul class="list-group list-group-flush">
+                            <div class="job-info-box">
+                                <li class="list-group-item">
+                                    <label for="role">Role</label>
+                                    <input class="form-control" type="text" name="{{jobs|length|string}}-role" />
+                                </li>
+                                <li class="list-group-item">
+                                    <label for="description">Description</label>
+                                    <textarea class="form-control" type="text" name="{{jobs|length|string}}-description"></textarea>
+                                </li>
+                                <li class="list-group-item">
+                                    <label for="budget">Budget</label>
+                                    <input class="form-control" type="number" name="{{jobs|length|string}}-budget" />
+                                </li>
+                                <li class="list-group-item">
+                                    <select class="custom-select">
+                                        <option selected> Currency </option>
+                                        <option value="AUD">AUD</option>
+                                        <option value="USD">USD</option>
+                                        <option value="EUR">EUR</option>
+                                    </select>
+                                </li>
+                                <li class="list-group-item">
+                                    <select class="custom-select">
+                                        <option selected> Skills </option>
+                                        <option value="AUD">SEO</option>
+                                        <option value="USD">Digital Marketing</option>
+                                        <option value="EUR">Front-end web developemtn</option>
+                                    </select>
+                                </li>
+                            </div>
+                            </li>
+                    </div>
+                </div>
 
-                <ul class="job-list" id="job-list">
-                    <li class="job-item">
-                        <div class="job-info-box">
-                            <label for="role">Role</label>
-                            <input type="text" name="{{jobs|length|string}}-role" />
-                            <label for="description">Description</label>
-                            <input type="text" name="{{jobs|length|string}}-description" />
-                            <label for="budget">Budget</label>
-                            <input type="number" name="{{jobs|length|string}}-budget" />
-                            <label for="currency">Currency</label>
-                            <select name="currency">
-                              <option value="AUD">AUD</option>
-                              <option value="USD">USD</option>
-                              <option value="EUR">EUR</option>
-                            </select>
-                            <label for="skills">Skills</label>
-                            <select name="skills">
-                              <option value="AUD">SEO</option>
-                              <option value="USD">Digital Marketing</option>
-                              <option value="EUR">Front-end web developemtn</option>
-                            </select>
-                        </div>
-                    </li>
-                </ul>
-                <a href="#" id="new-job-button">New job!</a>
-                <br />
-
-                <button type="submit" class="btn btn-primary" value="Submit" />
+                <input type="submit" class="mt-3 form-control btn btn-primary" value="Submit" />
 
         </form>
     </div>
