--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 <body>
     {% block content %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="#">SkillBox</a>
+        <a class="navbar-brand" href="/login">SkillBox</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
