--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,28 +9,28 @@
     <div class="d-flex-column projectsContainer">
         <h1> Active Projects </h1>
 
-        <div class="card bg-light m-1">
-            <div class="card-body">
+        <div class="card m-1">
+            <div class="card-body" >
                 <h4 class="card-title">Getting the word out</h5>
                     <div class="card-header"><b> Jobs Posted </b></div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-dark">SEO - Search Engine Optimization</li>
-                        <li class="list-group-item list-group-item-dark">Graphic Design</li>
-                        <li class="list-group-item list-group-item-dark">Digital marketing</li>
+                    <ul class="list-group list-group-flush" style="border-width:10px;">
+                        <li class="list-group-item list-group-item">SEO - Search Engine Optimization</li>
+                        <li class="list-group-item list-group-item">Graphic Design</li>
+                        <li class="list-group-item list-group-item">Digital marketing</li>
                     </ul>
-                    <a href="#" class="mt-2 btn btn-success">Project Details</a>
+                    <a href="{{url_for('singleProject', id=1)}}" class="mt-2 btn btn-success">Project Details</a>
             </div>
         </div>
-        <div class="card bg-light m-1">
+        <div class="card m-1">
             <div class="card-body">
                 <h4 class="card-title">Getting into business</h5>
                     <div class="card-header"><b> Jobs Posted </b></div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-dark">Website Development</li>
-                        <li class="list-group-item list-group-item-dark">Law documents</li>
-                        <li class="list-group-item list-group-item-dark">Marketing</li>
+                        <li class="list-group-item list-group">Website Development</li>
+                        <li class="list-group-item list-group">Law documents</li>
+                        <li class="list-group-item list-group">Marketing</li>
                     </ul>
-                    <a href="#" class="mt-2 btn btn-success">Project Details</a>
+                    <a href="{{url_for('singleProject', id=2)}}" class="mt-2 btn btn-success">Project Details</a>
             </div>
         </div>
     </div>
