login logout buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,17 @@
-<!DOCTYPE html>
-<html>
-	<head>
-        <meta charset="utf-8" />
-            <title>Luminary - Home</title>
-            <!-- <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='css/style.css') }}"> -->
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-
-        </head>
-	<body>
-        <div id="header">
-            <ul>
-                <li>Luminary</li>
-                <li><a class="hvr-underline-from-center" href="/">Home</a></li>
-             </ul>
-        </div>
-
-
-        </div>
-        <div class="rounded-box">
-            <h1>Welcome to Luminary</h1>
-            <h2>A crowdfunding platform supported by the power of blockchain </h2>
-        </div>
-        <div id="home-secondary-banner">
-				<h1>check out some amazing projects and give them your support with <b>trust</b> <i class="far fa-handshake"></i>
-			</div>
-        </div>
-        <div id="home-project-grid">
-			<a href='/project'>
-				<div class="project-grid-item">
-					<!-- <img src="{{url_for('static', filename='logo.png')}}"> -->
-					<p> Luminary </p>
-				</div>
-			</a>
-        </div>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+{% block head %}
+{{ super() }}
+{% endblock %}
+{% block content %}
+{{ super() }}
+<div class="row h-100 w-100 align-items-center">
+    <div class="col h-75">
+        <h1 class="container p-5 h-100 w-100 text-center" style="font-size: 90px;">
+            <div class="mb-3">Welcome to SkillBox</div>
+            <p class="lead" style="font-size:40px;">Manage large scale outsourced projects quickly and efficiently.</p>
+        </h1>
+    </div>
+</div>
+</div>
+{% endblock %}
