--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 <body>
     {% block content %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/login">SkillBox</a>
+        <a class="navbar-brand" href="/">SkillBox</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,6 +40,12 @@
                 </li>
             </ul>
         </div>
+        <a href="{{url_for('login')}}" class="mx-2 btn btn-secondary navbar-text text-white">
+            Login 
+        </a>
+        <a href="{{url_for('clear_token')}}" class="mx-2 btn btn-secondary navbar-text text-white">
+           Logout 
+        </a>
     </nav>
     {% endblock %}
 </body>
