--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <h1 class ="container p-5 h-100 w-100 text-center">
       <div class="mb-3">Login to Skillbox with Freelancer</div>
       <div class = "loginBannerContainer w-50 m-auto p-3">
-        <a href="/authorize">
+        <a href="{{url_for('handle_authorize')}}">
           <img id="loginBanner" class="img-fluid" src="{{ url_for('static', filename='images/freelancerLogo.png') }}" alt="Login with Freelancer"/>
         </a>
       </div>
