--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -54,7 +54,7 @@
                                 </br />
                                 <label for="skills">Skills</label>
                                 <div id="skill-results"></div>
-                                <select name="skills" id="1-select-skills" class="custom-select">
+                                <select name="skills" id="1-select-skills" style="width: 100%;">
                                     <option value='0'>Select Skill</option>
                                     {% for skill in skills %}
                                     <option value={{skill}}>{{skill}}</option>
