styling to skill result

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -56,7 +56,7 @@
                                 </li>
                                 <li class="list-group-item">
                                     <label for="skills">Skills</label>
-                                    <div id="skill-results"></div>
+                                    <ul class="list-inline mb-3" id="skill-results"></ul>
                                     <select name="skills" id="1-select-skills" style="width: 100%;">
                                         <option value='0'>Select Skill</option>
                                         {% for skill in skills %}
