--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -63,6 +63,7 @@
                                         <option value={{skill}}>{{skill}}</option>
                                         {% endfor %}
                                     </select>
+                                    <input type="hidden" id="hidden-results" name="hidden-results" value=""/>
                                 </li>
                             </div>
                         </ul>
