--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -64,7 +64,7 @@
                                         <option value={{skill}}>{{skill}}</option>
                                         {% endfor %}
                                     </select>
-                                    <input type="hidden" id="hidden-skills" name="hidden-skills" value=""/>
+                                    <input type="hidden" id="hidden-skills" name="1-hidden-skills" value=""/>
                                 </li>
                             </div>
                         </ul>
