--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a href="{{url_for('create_project')}}" class="btn btn-success nav-link p-2">Create New Project</a>
+                    <a href="{{url_for('packages')}}" class="btn btn-success nav-link p-2">Create New Project</a>
                 </li>
             </ul>
             {% endif %}
