--- a/templates/packages.html
+++ b/templates/packages.html
@@ -26,7 +26,7 @@
                             <li class="list-group-item list-group-item">Graphic Design</li>
                             <li class="list-group-item list-group-item">Digital marketing</li>
                         </ul>
-                        <a href="{{url_for('create_project')}}" class="mt-2 btn btn-success">Select</a>
+                        <a href="{{url_for('create_project', id = 1)}}" class="mt-2 btn btn-success">Select</a>
                 </div>
             </div>
             <div class="card m-1">
@@ -40,11 +40,11 @@
                         </div>
                         <div class="card-header"><b> Skill list </b></div>
                         <ul class="list-group list-group-flush" style="border-width:10px;">
-                            <li class="list-group-item list-group-item">Law Compliance</li>
+                            <li class="list-group-item list-group-item">Tax Law</li>
                             <li class="list-group-item list-group-item">Marketing</li>
-                            <li class="list-group-item list-group-item">Customer Outreach</li>
+                            <li class="list-group-item list-group-item">Customer Service</li>
                         </ul>
-                        <a href="{{url_for('create_project')}}" class="mt-2 btn btn-success">Select</a>
+                        <a href="{{url_for('create_project', id = 2)}}" class="mt-2 btn btn-success">Select</a>
                 </div>
             </div>
             <div class="card m-1">
@@ -60,9 +60,9 @@
                         <ul class="list-group list-group-flush" style="border-width:10px;">
                             <li class="list-group-item list-group-item">Ghostwriting</li>
                             <li class="list-group-item list-group-item">Photography</li>
-                            <li class="list-group-item list-group-item">Scene framing</li>
+                            <li class="list-group-item list-group-item">Video Editing</li>
                         </ul>
-                        <a href="{{url_for('create_project')}}" class="mt-2 btn btn-success">Select</a>
+                        <a href="{{url_for('create_project', id = 3)}}" class="mt-2 btn btn-success">Select</a>
                 </div>
             </div>
         </div>
