Added logo to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
 {% endblock %}
 {% block content %}
 {{ super() }}
-<div class="row h-100 w-100 align-items-center">
+<div class="align-items-center">
     <div class="col h-75">
-        <h1 class="container p-5 h-100 w-100 text-center" style="font-size: 90px;">
+        <h1 class="container p-5 h-100 w-100 text-center" style="font-size: 90px; ">
+            <img src="/static/images/logo.png" class="width=100px; height=100px"> 
             <div class="mb-3">Welcome to SkillBox</div>
             <p class="lead" style="font-size:40px;">Manage large scale outsourced projects quickly and efficiently.</p>
         </h1>
