--- a/templates/individualProject.html
+++ b/templates/individualProject.html
@@ -8,54 +8,28 @@
 <div class="d-flex justify-content-center">
     <div class="card p-5 w-50">
         <div class="form-group">
-            <h2>{Project Name}</h2>
+            <h2>{{ project.get_title() }}</h2>
             <h6 class="text-right">Date created: 2019-11-22</h6>
             <div class="card my-3">
                 <div class="card-header font-weight-bold">Project Description </div>
-                <p class="text-justify card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                    sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-justify card-body">{{ project.get_desc() }}</p>
             </div>
             <h3>Jobs Listed on Freelancer</h3>
+            {% for job in project.get_jobs() %}
             <div class="card my-3">
                 <div class="card-header font-weight-bold">
-                    <div class="float-left">Job - {Skill}</div>
-                    <span class="badge badge-success font-weight-bold ml-3">{Status}</span>
-                    <a href="#" class="btn btn-primary float-right p-2">Go To Job</a>
+                    <div class="float-left">Job - {{ job.get_title() }}</div>
+                    <span class="badge badge-primary font-weight-bold ml-3">Pending</span>
+                    <a href="https://www.freelancer-sandbox.com/projects/{{ job.get_job_link() }}/details" class="btn btn-primary float-right p-2">Go To Job</a>
                 </div>
                 <p class="text-justify card-body">
-                    <span class="font-weight-bold">Freelancer currently assigned: <a href="#">{freelancer}</a>
+                    <span class="font-weight-bold">Freelancer currently assigned: <a href="https://www.freelancer.com/u/naezeroth?">Apurva S.</a>
                     </span><br><br>
                     <span class="font-weight-bold">Job Description</span><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
+                    {{ job.get_description() }}
                 </p>
             </div>
-            <div class="card my-3">
-                <div class="card-header font-weight-bold">
-                    <div class="float-left">Job - {Skill}</div>
-                    <span class="badge badge-danger font-weight-bold ml-3">{Status}</span>
-                    <a href="#" class="btn btn-primary float-right p-2">Go To Job</a>
-                </div>
-                <p class="text-justify card-body">
-                    <span class="font-weight-bold">Freelancer currently assigned: <a href="#">{freelancer}</a>
-                    </span><br><br>
-                    <span class="font-weight-bold">Job Description</span><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
