--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <div class="col h-75">
         <h1 class="container p-5 h-100 w-100 text-center" style="font-size: 90px; ">
             <img src="/static/images/logo.png" class="width=100px; height=100px"> 
-            <div class="mb-3">Welcome to SkillBox</div>
-            <p class="lead" style="font-size:40px;">Manage large scale outsourced projects quickly and efficiently.</p>
+            <div class="mb-3" style="font-weight: 500; font-weight: 400;">Welcome to SkillBox</div>
+            <p class="lead" style="font-size:40px; font-weight: 200;">Manage large scale outsourced projects quickly and efficiently.</p>
         </h1>
     </div>
 </div>
