--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,14 @@
 {{ super() }}
 <div class = "row h-100 w-100 align-items-center">
   <div class = "col h-75">
-    <h1 class ="container p-5 h-100 w-100 text-center">
-      <div class="mb-3">Login to SkillBox with Freelancer</div>
+    <h1 class ="container p-5 h-100 w-100 text-center" style="font-weight: 300;">
+      <div class="mb-5 text-center">Login to SkillBox with Freelancer</div>
       <div class = "loginBannerContainer w-50 m-auto p-3">
         <a href="{{url_for('handle_authorize')}}">
           <img id="loginBanner" class="img-fluid" src="{{ url_for('static', filename='images/freelancerLogo.png') }}" alt="Login with Freelancer"/>
         </a>
       </div>
+      </h1>
     </div>
   </div>
 </div>
