--- a/templates/individualProject.html
+++ b/templates/individualProject.html
@@ -12,7 +12,13 @@
             <h6 class="text-right">Date created: 2019-11-22</h6>
             <div class="card my-3">
                 <div class="card-header font-weight-bold">Project Description </div>
-                <p class="text-justify card-body">{{ project.get_desc() }}</p>
+                <div class="text-justify card-body">
+                    {{ project.get_desc() }}
+                    <form method="POST" action="{{url_for('createChannel')}}">
+                        <input type="text" class="form-control w-50 mt-3 mb-1" name="name" placeholder="Channel Name"></input>
+                        <input type="submit" class="w-50 form-control btn btn-primary" value="Create Slack Channel"></input>
+                    </form>
+                </div>
             </div>
             <h3>Jobs Listed on Freelancer</h3>
             {% for job in project.get_jobs() %}
