--- a/templates/packages.html
+++ b/templates/packages.html
@@ -6,7 +6,7 @@
 {% block content %}
 {{ super() }}
 <div class="d-flex justify-content-center">
-    <div class="projectsContainer container">
+    <div class="packagesContainer container">
         <div class="row">
             <h1 class="mb-3"> Packages </h1>
         </div>
