--- a/templates/individualProject.html
+++ b/templates/individualProject.html
@@ -16,7 +16,7 @@
                     {{ project.get_desc() }}
                     <form method="POST" action="{{url_for('createChannel')}}">
                         <input type="text" class="form-control w-50 mt-3 mb-1" name="name" placeholder="Channel Name"></input>
-                        <input type="submit" class="w-50 form-control btn btn-primary" value="Create Slack Channel"></input>
+                        <input type="submit" class="w-50 form-control btn btn-primary btn-purple" value="Create Slack Channel"></input>
                     </form>
                 </div>
             </div>
